Bug 384139 - Error Copying File to Device
Summary: Error Copying File to Device
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: file (other bugs)
Version First Reported In: 4.8.0
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Ralf Habacker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-29 13:05 UTC by Robert Blackwell
Modified: 2021-04-16 09:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Blackwell 2017-08-29 13:05:12 UTC
When I use the Backup function I receive an error. The message reads "Error Copying File to Device".

Backup is being saved to an SMB share on a NAS. The error occurs when using the NAS or even if storage location is changed to a local device.
Comment 1 Robert Blackwell 2017-08-29 13:06:45 UTC
Version in use is Version 4.8.0-0836d385
Comment 2 Ralf Habacker 2017-09-15 15:59:05 UTC
Git commit 9771cfa20fbf2d6bd2e63fea0aefc410d720b870 by Ralf Habacker.
Committed on 15/09/2017 at 15:57.
Pushed by habacker into branch '4.8'.

Fix 'Error Copying File to Device'

- Use KIO:Netaccess::upload() to copy the file on all platforms
- Print out saved file in the information boxes

FIXED-IN:4.8.1

M  +19   -28   kmymoney/kmymoney.cpp

https://commits.kde.org/kmymoney/9771cfa20fbf2d6bd2e63fea0aefc410d720b870
Comment 3 Robert Blackwell 2017-09-16 00:55:40 UTC
I can confirm the backup issue is fixed in Version 4.8.0-33f62546. Thank you for your time and effort in this regard.