Fix 'Error Copying File to Device'

created file time stamp is not up to date

FIXED-IN:4.8.1
BUG:384139